--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner hide-mobile">
       <div class="container">
-        <h3-8>Campout Schedule and Local Events</h3-8>
+        <h3 class="size8">Campout Schedule and Local Events</h3>
       </div>
     </div>
     <content-strip>
