--- a/faqs.html
+++ b/faqs.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner hide-mobile">
       <div class="container">
-        <h3-8>Frequently Asked Questions</h3-8>
+        <h3 class="size8">Frequently Asked Questions</h3>
       </div>
     </div>
     <content-strip>
