--- a/helpful-links.html
+++ b/helpful-links.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner white">
       <div class="container">
-        <h3-8>Helpful Links</h3-8>
+        <h3 class="size8">Helpful Links</h3>
         <p><a href="scouting.org">Boy Scouts of America</a></p>
         <p><a href="http://www.atlantabsa.org/">Atlanta Area Council</a></p>
         <p><a href="https://www.scouting.org/filestore/pdf/Boy_Scout_Insignia.pdf">Uniform Insignia Placement</a></p>
