--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </carousel>
   <div class="banner extra-padding-y">
     <div class="container">
-      <h3-8>Welcome to Troop 370</h3-8>
+      <h3 class="size8">Welcome to Troop 370</h3>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <div class="buttonrow">
         <a href="about.html#about" type="button" varient="light" class="bigger">About page</a>
@@ -94,7 +94,7 @@
   <div class="banner extra-padding-y red" id="time-banner">
     <div class="container">
       <img id="meeting-icon" alt="meeting-icon" src="src/icons/meeting icon.png">
-      <h3-8>Weekly Meetings</h3-8>
+      <h3 class="size8">Weekly Meetings</h3>
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </div>
   </div>
