--- a/recharter.html
+++ b/recharter.html
@@ -9,7 +9,7 @@
   <body>
     <div class="banner">
       <div class="container">
-        <h3-8 class="hide-mobile">Annual Recharter</h3-8>
+        <h3 class="size8 hide-mobile">Annual Recharter</h3>
         <p>It's time to renew your registration (recharter). Each year the Troop and St James UMC renews their affiliation with the Boy Scouts of America. Recharter is also when individual youth and adult members of Troop 370 renew their memberships with the Troop.</p>
         <p>As in past years, a detailed recharter notice will be sent to each Troop 370 household. It lists those currently registered and the total fee due from that household for 2018. Check your email for more details.</p>
         <p>Please make every effort to complete the recharter process by November 30th.</p>
