--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -28,7 +28,7 @@
     </topnav>
     <div class="banner">
       <div class="container">
-        <h3-8>Banner</h3-8>
+        <h3 class="size8">Banner</h3>
         <subtitle>subtitle</subtitle>
         <div class="buttonrow">
           <a href="#" type="button" varient="light">Button</a>
@@ -37,7 +37,7 @@
     </div>
     <content-strip>
       <div class="container">
-        <h3-8>Strip h3-8</h3-8>
+        <h3 class="size8">Strip h3-8</h3>
         <subtitle>This is a subtitle element.</subtitle>
         <p>This is a paragraph element.</p>
         <div class="buttonrow">
