--- a/submission-received.html
+++ b/submission-received.html
@@ -12,7 +12,7 @@
   <body style="background-color: var(--banner-background-color);">
     <div class="banner">
       <container class="center" style="height:calc(100vh - 185px);padding-top:0;padding-bottom:0;">
-        <h3-8>Submission Sent</h3-8>
+        <h3 class="size8">Submission Sent</h3>
         <div class="buttonrow">
           <a href="contact.html#contact" type="button" varient="light">Return</a>
         </div>
