--- a/advancement.html
+++ b/advancement.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner extra-padding-y center hide-mobile">
       <div class="container">
-        <h3-8>Advancement</h3-8>
+        <h3 class="size8">Advancement</h3>
         <p>It is recommended that Scouts attempt to get something signed off towards advancement at each meeting.  Troop 370 has registered Merit Badge Counselors and Scout Instructors to help Scouts advance. View the list below for advancement resources.</p>
       </div>
     </div>
