--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -12,7 +12,7 @@
   <body>
     <content-strip>
       <div class="container">
-        <h3-8>Contact Webmaster</h3-8>
+        <h3 class="size8">Contact Webmaster</h3>
         <subtitle>Jack Buehner</subtitle>
         <div class="row">
           <form class="col s12" name="contact-webmaster" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
