--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,13 @@
   <body>
     <div class="banner">
       <div class="container">
-        <h3-8 class="hide-mobile" >Contact</h3-8>
+        <h3 class="size8 hide-mobile" >Contact</h3>
         <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
       </div>
     </div>
     <content-strip>
       <div class="container">
-        <h3-8>General Contact</h3-8>
+        <h3 class="size8">General Contact</h3>
         <div class="row">
           <form class="col s12" name="contact-general" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
             <div class="row">
