--- a/forms-documents.html
+++ b/forms-documents.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner extra-padding-y center hide-mobile">
       <div class="container">
-        <h3-8>Forms &amp; Documents</h3-8>
+        <h3 class="size8">Forms &amp; Documents</h3>
       </div>
     </div>
     <content-strip>
