--- a/leaders.html
+++ b/leaders.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner">
       <div class="container">
-        <h3-8>Current Leadership</h3-8>
+        <h3 class="size8">Current Leadership</h3>
       </div>
     </div>
     <content-strip>
