--- a/leadership-training.html
+++ b/leadership-training.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner red hide-mobile">
       <div class="container">
-        <h3-8>Leadership Training</h3-8>
+        <h3 class="size8">Leadership Training</h3>
       </div>
     </div>
     <content-strip class="blue">
