--- a/new-scouts.html
+++ b/new-scouts.html
@@ -18,7 +18,7 @@
     <div class="banner extra-padding-y" id="time-banner">
       <div class="container">
         <img id="meeting-icon" src="src/icons/meeting icon.png">
-        <h3-8>Weekly Meetings</h3-8>
+        <h3 class="size8">Weekly Meetings</h3>
         <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
       </div>
     </div>
