--- a/payments.html
+++ b/payments.html
@@ -9,7 +9,7 @@
   <body>
     <div class="banner">
       <div class="container">
-        <h3-8 class="hide-mobile">Payments</h3-8>
+        <h3 class="size8 hide-mobile">Payments</h3>
         <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
       </div>
     </div>
