--- a/advancement.html
+++ b/advancement.html
@@ -16,7 +16,7 @@
         <p>It is recommended that Scouts attempt to get something signed off towards advancement at each meeting.  Troop 370 has registered Merit Badge Counselors and Scout Instructors to help Scouts advance. View the list below for advancement resources.</p>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <div class="split50">
           <div>
@@ -48,7 +48,7 @@
         </div>
 
       </div>
-    </content-strip>
+    </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
