--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h3 class="size8">Contact Webmaster</h3>
         <subtitle>Jack Buehner</subtitle>
@@ -48,7 +48,7 @@
           </form>
         </div>
       </div>
-    </content-strip>
+    </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
