--- a/eagle-scout-honor-roll.html
+++ b/eagle-scout-honor-roll.html
@@ -19,18 +19,18 @@
         </div>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <iframe src="https://www.batchgeo.com/map/a30ec08cf79f88a9f9a28322cda3d34c" class="project-map"></iframe>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <div id="eagle-list">
           <div data-type="AwesomeTableView" data-viewID="-LOnyNWJuHxbPlLf-Ul7"></div>
         </div>
       </div>
-    </content-strip>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
