--- a/leaders.html
+++ b/leaders.html
@@ -15,7 +15,7 @@
         <h3 class="size8">Current Leadership</h3>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h4>Scouts</h4>
         <p>Senior Patrol Leader: Ethan Hunt</p>
@@ -26,15 +26,15 @@
           <a type="button" varient="dark">More Positions & Contact Information</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>Scouters</h4>
         <p>Scoutmaster: Harry Evans<br><a href="contact.html">Contact</a></p>
         <p>Troop Committee Chairman: John Buehner<br><a href="troop-roster.html">Contact</a></p>
         <p>Chartered Organization Representative: Kent Watkins<br><a href="troop-roster.html">Contact</a></p>
       </div>
-    </content-strip>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
