--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h3 class="size8">Strip h3-8</h3>
         <subtitle>This is a subtitle element.</subtitle>
@@ -44,43 +44,43 @@
           <a href="#" type="button" varient="dark">Button</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>Strip h4</h4>
         <div class="buttonrow">
           <a href="#" type="button" varient="dark">Button</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h5>Strip h5</h5>
         <subtitle>This is a subtitle element.</subtitle>
       </div>
-    </content-strip>
+    </div>
     <div class="buttonrow">
       <a href="#" type="button" varient="dark">Button</a>
       <a href="#" type="button" varient="dark">Longer Button</a>
     </div>
-    <content-strip-2>
+    <div class="content-strip"-2>
       <div class="container">
         <heading>Strip (type 2) - heading 2nd</heading>
         <p>this strip starts with a second level heading and can contain content like paragraphs and buttons - p</p>
       </div>
     </content-strip-2>
-    <content-strip-1>
+    <div class="content-strip"-1>
       <div class="container">
         <heading>Strip (type 1) - heading </heading>
         <p>this strip starts with a heading and can contain content like paragraphs and buttons - p</p>
       </div>
     </content-strip-1>
-    <content-strip-3>
+    <div class="content-strip"-3>
       <div class="container">
         <heading>Strip (type 3) - heading 3rd ONLY</heading>
       </div>
     </content-strip-3>
-    <content-strip-4>
+    <div class="content-strip"-4>
       <div class="container">
         <heading>Strip (type 4) - heading 3rd</heading>
         <p>this strip starts with a thrid level heading and can contain content like paragraphs and buttons - p</p>
