--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h3 class="size8">General Contact</h3>
         <div class="row">
@@ -58,7 +58,7 @@
           </form>
         </div>
       </div>
-    </content-strip>
+    </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
