--- a/forms-documents.html
+++ b/forms-documents.html
@@ -15,7 +15,7 @@
         <h3 class="size8">Forms &amp; Documents</h3>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <div class="split50">
           <div>
@@ -66,7 +66,7 @@
         </div>
 
       </div>
-    </content-strip>
+    </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
