--- a/payments.html
+++ b/payments.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h4>Venmo</h4>
         <p>PREFERRED PAYMENT METHOD<br><br>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the 'What's it for?' section.<br><br>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.<br><br>Credit card payments will incur merchant fees.</p>
@@ -30,8 +30,8 @@
           <a href='http://onelink.to/zryeqw' type='button' varient='dark'>Get app</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>PayPal</h4>
         <p>Use the 'Friends & Family' transfer option to make payments without merchant fees. This option is available only if your Paypal and bank account are connected. Credit card payments will incur merchant fees.<br><br>Send money via Paypal to troop370treasurer@gmail.com and include SCOUT NAME and EVENT NAME with your payment.<br><br>If you are paying for multiple campers or events, please pay for them in separate Paypal transactions, NOT in a single payment. Otherwise, you risk not getting credited for some campers.</p>
@@ -39,8 +39,8 @@
           <a href='https://www.paypal.com/myaccount/transfer/send' type='button' varient='dark' id="paypal">Pay using PayPal</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>Cash, Check, or Money Order</h4>
         <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
@@ -49,7 +49,7 @@
           <a href='https://www.troop370atlanta.org/campout-sign-up' type='button' varient='dark'>Campout sign-up</a>
         </div>
       </div>
-    </content-strip>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
