--- a/recharter.html
+++ b/recharter.html
@@ -16,7 +16,7 @@
         <p>Choose one of the payment options below to recharter.</p>
       </div>
     </div>
-    <content-strip>
+    <div class="content-strip">
       <div class="container">
         <h4>Venmo (Preferred)</h4>
         <p>This year, the Troop is offering the option of making your payment using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, enter the Scout’s name and “Recharter” (e.g. John Doe / Recharter) with your payment in the 'What's it for?' section.<br>You may use only your last name if your family has more than one member renewing their registration.<br><br>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.</p>
@@ -25,8 +25,8 @@
           <a href='http://onelink.to/zryeqw' type='button' varient='dark'>Get app</a>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>PayPal</h4>
         <p>Like last year the Troop is offering the option of making your payment using PayPal.  Although PayPal will impose merchant fees for annual dues (which are not eligible for Friends and Family treatment), we understand that many scout families prefer PayPal over Venmo. You may pay using the button below.<br>Simply follow the online instructions. In the box entitled "Scout Name/Event", enter "John Doe/Recharter."  As with Venmo, you may use only your last name if your family has more than one member renewing their registration.</p>
@@ -39,8 +39,8 @@
           </form>
         </div>
       </div>
-    </content-strip>
-    <content-strip>
+    </div>
+    <div class="content-strip">
       <div class="container">
         <h4>Check and Snail Mail</h4>
         <p>If you prefer to pay by check instead of Venmo or PayPal:</p>
@@ -49,7 +49,7 @@
           <li style="list-style-type: disc;list-style-position: outside;">Mail the check – and your email address - no later than November 30 to Lori Ainsworth at 5221 Riverview RD NW, Atlanta, GA 30327. </li>
         </ul>
       </div>
-    </content-strip>
+    </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
