recharter notice only on payments page

--- a/payments.html
+++ b/payments.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='styles/page-specific.css'>
   </head>
   <body>
+    <div class='banner red' id='recharter' style='padding:0;background:#000;position:sticky;top:0px;z-index:100;transition:box-shadow 0.25s;'> <div class='container'> <p style='display: inline-block;padding:0 10px;'>It's time to recharter.</p> <div class='buttonrow' style='padding:0; display:inline-block;'> <a href='recharter.html' type='button' varient='light' style='margin:0;border:none;padding:6.5px 10px;'>Learn more & recharter</a> </div> </div> </div>
     <div class="banner">
       <div class="container">
         <h3 class="size8 hide-mobile">Payments</h3>
