about page button mdc ripple

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner extra-padding-y red">
@@ -39,7 +41,12 @@
         <h3 class="size8">Get the New Parent Handbook</h3>
         <p>The Troop 370 New Parent Handbook is packed full of information.</p>
         <div class="buttonrow">
-          <a href="forms-documents.html" type="button" varient="light" class="bigger">Learn more</a>
+          <a href="src/documents/New Parent Handbook.pdf" class="mdc-button standard-light-button mdc-button--outlined">
+            <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:24px;">
+            <path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"/>
+            </svg>
+            Download
+          </a>
         </div>
       </div>
     </div>
