--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h3 class="size8">Welcome to Troop 370</h3>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <div class="buttonrow">
-        <a href="about.html#about" class="mdc-button standard-light-button mdc-button--outlined">About page</a>
+        <a href="about.html" class="mdc-button standard-light-button mdc-button--outlined">About page</a>
       </div>
     </div>
   </div>
