mdc buttons for all remaining pages

--- a/404.html
+++ b/404.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
-  </head>
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
+</head>
   <body style="background: url('/src/404.jpg') no-repeat center center fixed;background-size:cover;">
     <div class="banner extra-padding-y" style="background: none !important;text-align:center">
       <div class="conatainer" style="width:100%">
         <h3 class="size8">404 Error</h3>
         <p>Page not found</p>
         <div class="buttonrow">
-          <a href="index.html#home" type="button" varient="light" class="bigger">Home page</a>
+          <a href="index.html#home" class="mdc-button standard-light-button mdc-button--outlined" class="bigger">Home page</a>
         </div>
       </div>
     </div>
