--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
-  </head>
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
+</head>
   <body>
     <div class="banner extra-padding-y red">
       <div class="container">
