--- a/finding-mb.html
+++ b/finding-mb.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner white">
@@ -15,7 +17,7 @@
         <h3 class="size8 hide-mobile">Finding a Merit Badge Class or Counselor</h3>
         <p>Troop 370 hosts Merit Badge Clinics twice a year. The schedule can be viewed on the Calendar. Scouts can also register for other Merit Badge Clinics. In addition, scouts can reach out to our Merit Badge counselors at any time to work on Merit Badges.<br><br>To see all advancement opportunities - including Merit Badge Clinics and a list of Merit Badge counselors - please view the Advancement page.</p>
         <div class="buttonrow">
-          <a href="advancement.html" type="button" varient="dark">Advancement</a>
+          <a href="advancement.html" class="mdc-button standard-dark-button mdc-button--outlined">Advancement</a>
         </div>
       </div>
     </div>
