--- a/leaders.html
+++ b/leaders.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner">
@@ -23,7 +25,7 @@
         <p>Assistant Senior Patrol Leader over Quartermasters, Scribes, Librarians, Historians, and Webmasters: Henry Peck</p>
         <p>Assistant Senior Patrol Leader over Instructors, Troop Guides, Den Chiefs, and Gymmasters: Sterling Shepard</p>
         <div class="buttonrow">
-          <a type="button" varient="dark">More Positions & Contact Information</a>
+          <a class="mdc-button standard-dark-button mdc-button--outlined">More Positions & Contact Information</a>
         </div>
       </div>
     </div>
