--- a/leadership-training.html
+++ b/leadership-training.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner red hide-mobile">
@@ -26,7 +28,7 @@
         <h4>National Youth Leadership Training (NYLT)</h4>
         <p>National Youth Leadership Training is an exciting, action-packed program designed for councils to provide youth members with leadership skills and experience they can use in their home troops.</p>
         <div class="buttonrow">
-          <a href="http://aacnylt.org" type="button" varient="light">AAC NYLT website</a>
+          <a href="http://aacnylt.org" class="mdc-button standard-light-button mdc-button--outlined">AAC NYLT website</a>
         </div>
       </div>
     </div>
@@ -35,7 +37,7 @@
         <h4>National Advanced Youth Leadership Experience (NAYLE)</h4>
         <p>National Advanced Youth Leadership Experience is an exciting program that enhances leadership skills and expands upon the team-building and ethical decision-making skills learned in NYLT. NAYLE emphasizes leadership, teamwork, and selfless service, and uses the core elements of NYLT to help youth internalize and strengthen these skills. The National Advanced Youth Leadership Experience course is now available at all national high-adventure bases. The material presented is basically the same at all four venues but is site-specific.</p>
         <div class="buttonrow">
-          <a href="https://www.scouting.org/programs/boy-scouts/resources/nayle/" type="button" varient="light">NAYLE webpage</a>
+          <a href="https://www.scouting.org/programs/boy-scouts/resources/nayle/" class="mdc-button standard-light-button mdc-button--outlined">NAYLE webpage</a>
         </div>
       </div>
     </div>
