--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -3,7 +3,9 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Content Test Page</title>
     <link rel="stylesheet" href="components.css">
-  </head>
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
+</head>
   <body>
     <titlebar>
       <div class="container">
@@ -31,7 +33,7 @@
         <h3 class="size8">Banner</h3>
         <subtitle>subtitle</subtitle>
         <div class="buttonrow">
-          <a href="#" type="button" varient="light">Button</a>
+          <a href="#" class="mdc-button standard-light-button mdc-button--outlined">Button</a>
         </div>
       </div>
     </div>
@@ -41,7 +43,7 @@
         <subtitle>This is a subtitle element.</subtitle>
         <p>This is a paragraph element.</p>
         <div class="buttonrow">
-          <a href="#" type="button" varient="dark">Button</a>
+          <a href="#" class="mdc-button standard-dark-button mdc-button--outlined">Button</a>
         </div>
       </div>
     </div>
@@ -49,7 +51,7 @@
       <div class="container">
         <h4>Strip h4</h4>
         <div class="buttonrow">
-          <a href="#" type="button" varient="dark">Button</a>
+          <a href="#" class="mdc-button standard-dark-button mdc-button--outlined">Button</a>
         </div>
       </div>
     </div>
@@ -60,8 +62,8 @@
       </div>
     </div>
     <div class="buttonrow">
-      <a href="#" type="button" varient="dark">Button</a>
-      <a href="#" type="button" varient="dark">Longer Button</a>
+      <a href="#" class="mdc-button standard-dark-button mdc-button--outlined">Button</a>
+      <a href="#" class="mdc-button standard-dark-button mdc-button--outlined">Longer Button</a>
     </div>
     <div class="content-strip"-2>
       <div class="container">
