--- a/submission-received.html
+++ b/submission-received.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body style="background-color: var(--banner-background-color);">
     <div class="banner">
       <container class="center" style="height:calc(100vh - 185px);padding-top:0;padding-bottom:0;">
         <h3 class="size8">Submission Sent</h3>
         <div class="buttonrow">
-          <a href="contact.html#contact" type="button" varient="light">Return</a>
+          <a href="contact.html#contact" class="mdc-button standard-light-button mdc-button--outlined">Return</a>
         </div>
       </div>
     </div>
