--- a/template-embedded-form.html
+++ b/template-embedded-form.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdeN6d4gIiDYWE9pHffrqeNVpGDMW5X6DTUg6gTpKkaAeZS6g/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0" style="height:calc(100vh - 64px);width:100%;">Loading...</iframe>
