--- a/campout-sign-up_encrypted.html
+++ b/campout-sign-up_encrypted.html
@@ -164,6 +164,8 @@
           }
         }
     </style>
+  <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
 </head>
 
 <body class="staticrypt-body">
