--- a/eagle-scout-honor-roll.html
+++ b/eagle-scout-honor-roll.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner white">
@@ -15,7 +19,7 @@
         <h3 class="size8 hide-mobile">Eagle Scout Honor Roll</h3>
         <p>Troop 370 has a proud tradition of Eagle Scouts dating back to our first Eagle, George Takis, in 1965. Through the PDF file below you can view the impact that our Eagle Scouts, now over 200 in number, have had on their community through their Eagle Service Projects. What is more, our Troop 370 Eagle Scouts have continued to make their mark on the world through their service and leadership as adults.</p>
         <div class="buttonrow">
-          <a href="#eagle-list" type="button" varient="dark">View Eagle Honor Roll List</a>
+          <a href="#eagle-list" class="mdc-button standard-dark-button mdc-button--outlined">View Eagle Honor Roll List</a>
         </div>
       </div>
     </div>
