--- a/payments.html
+++ b/payments.html
@@ -7,6 +7,8 @@
     <link rel='stylesheet' href='styles/page-specific.css'>
     <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <div class="banner">
