--- a/photos.html
+++ b/photos.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
     <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="styles/bundle.css">
+    <script src="scripts/bundle.js" async></script>
   </head>
   <body>
     <iframe src="https://www.store.troop370atlanta.org/photos" style="width:100vw;height:calc(100vh - 64px);"></iframe>
