--- a/password_template.html
+++ b/password_template.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
-    <meta charset="utf-8">
-    <title>{title}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='styles/components.css'>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Protected Page</title>
+
+    <!-- troop370 encrypted page styles -->
+    <link rel='stylesheet' href='styles/staticrypt.css'>
 
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
@@ -13,194 +14,41 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
     <meta http-equiv="pragma" content="no-cache"/>
 
-    <style>
-        .staticrypt-hr {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            border: 0;
-        }
-
-        .staticrypt-page {
-            /* width: 450px; */
-            margin: auto;
-            box-sizing: border-box;
-            /* height: 100%; */
-        }
-
-        .staticrypt-form {
-            position: relative;
-            z-index: 1;
-            background: #FFFFFF;
-            max-width: 450px;
-            width: 450px;
-            margin: 0 auto 100px;
-            padding: 45px;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-            min-height: 480px;
-            border-radius: 2px;
-        }
-
-        .staticrypt-form input {
-            outline: 0;
-            border-bottom: 1px solid #e0e0e0;
-            box-shadow: 0 1px 0 0 #e0e0e0;
-            width: 100%;
-            border: 0;
-            margin: 0 0 15px;
-            padding: 15px;
-            box-sizing: border-box;
-            font-size: 14px;
-            margin-top: 3rem;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button {
-            text-transform: uppercase;
-            outline: 0;
-            background-color: #003f87;
-            width: auto;
-            border: 0;
-            padding: 15px;
-            color: #FFFFFF;
-            font-size: 14px;
-            cursor: pointer;
-            margin-top: 0;
-            letter-spacing: .5px;
-            height: 36px;
-            line-height: 36px;
-            padding: 0 2rem;
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-            border-radius: 2px;
-            transition: .3s ease-out;
-            margin-top: 20px;
-            float: right;
-        }
-
-        input[type="password"]:focus:not([readonly]) {
-          border-bottom: 1px solid #003f87;
-          box-shadow: 0 1px 0 0 #003f87;
-        }
-        .staticrypt-form .staticrypt-decrypt-button:hover, .staticrypt-form .staticrypt-decrypt-button:active, staticrypt-form .staticrypt-decrypt-button:focus {
-            box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
-            background-color: #0352ad;
-        }
-
-        .staticrypt-form .staticrypt-decrypt-button:active, staticrypt-form .staticrypt-decrypt-button:focus {
-          background-color: #0063d4;
-        }
-
-        .staticrypt-html {
-            height: 100%;
-        }
-
-        .staticrypt-body {
-            margin-bottom: 1em;
-            background: #eee;
-            font-family: "Roboto", sans-serif;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            position: relative;
-            top: 50%;
-            transform: perspective(1px) translateY(-50%);
-        }
-
-        .staticrypt-instructions {
-            margin-top: -1em;
-            margin-bottom: 1em;
-            text-align: center;
-        }
-
-        .staticrypt-title {
-            font-size: 1.5em;
-            font-family: "IBM Plex Sans", sans-serif;
-            padding-bottom: 6px;
-        }
-        .staticrypt-title:first-of-type {
-          padding-bottom: 14px;
-          color: #003f87;
-          padding-top: 10px;
-        }
-
-        .staticrypt-footer {
-            position: fixed;
-            height: 20px;
-            font-size: 16px;
-            padding: 2px;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin-bottom: 0;
-        }
-
-        .staticrypt-footer p {
-            margin: 2px;
-            text-align: center;
-            float: right;
-        }
-
-        .staticrypt-footer a {
-            text-decoration: none;
-        }
-
-        .idk-password {
-            margin-top: 20px;
-        }
-
-        @media (max-width:600px) {
-          .staticrypt-form {
-            max-width: none;
-            width: 100%;
-            height: 100%;
-          }
-          .staticrypt-page {
-            height: 100%;
-          }
-          .staticrypt-body {
-            top: auto;
-            transform: none;
-            height: 100vh;
-          }
-          .staticrypt-html {
-            overflow: hidden;
-          }
-        }
-    </style>
-  <link rel="stylesheet" href="styles/bundle.css">
+    <!-- material design components -->
+    <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
 </head>
 
-<body class="staticrypt-body">
-<div class="staticrypt-page">
-    <div class="staticrypt-form">
-        <div class="staticrypt-instructions">
-            <p class="staticrypt-title">Troop 370</p>
-            <p class="staticrypt-title">Sign In</p>
-            <p>with your member password</p>
-        </div>
-
-        <hr class="staticrypt-hr">
-
-        <form id="staticrypt-form" action="#" method="post">
-            <input id="staticrypt-password"
-                   type="password"
-                   name="password"
-                   placeholder="passphrase"
-                   autofocus/>
-            <p class="idk-password">Don't know the password? Request the password from the Webmaster.</p>
-            <p><a href="contact-webmaster.html" style="font-family: var(--button-font-family);font-weight: 600;text-transform: uppercase;text-decoration: none;color: #003f87;">Contact Webmaster</a></p>
-
-            <input type="submit" class="staticrypt-decrypt-button" value="Submit"/>
-        </form>
+<body>
+  <div class="main-box">
+    <div>
+      <img src="./src/icons/troop370buglelogo.png" style="display: none;">
+      <p class="logo">Troop 370</p>
+      <p class="instruction-heading">Sign in</p>
+      <p class="instruction-sub">with your member password</p>
     </div>
-
-</div>
-
+    <form id="staticrypt-form" action="#" method="post">
+      <div class="mdc-text-field mdc-text-field--outlined input member-pass">
+        <input id="staticrypt-password" type="password" name="password" class="mdc-text-field__input" autofocus="autofocus">
+        <div class="mdc-notched-outline">
+          <div class="mdc-notched-outline__leading"></div>
+          <div class="mdc-notched-outline__notch">
+            <label for="staticrypt-password" class="mdc-floating-label">Password</label>
+          </div>
+          <div class="mdc-notched-outline__trailing"></div>
+        </div>
+      </div>
+      <p class="password-question">Don't know the password? Request the pasword from the Webmaster.</p>
+      <a href="./contact-webmaster.html" class="mdc-button contact">Contact Webmaster</a>
+      <div class="submit-button">
+        <button type="submit" class="mdc-button mdc-button--raised standard-dark-button" value="Submit">Submit</button>
+      </div>
+    </form>
+  </div>
 
 {crypto_tag}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
 <script>
     document.getElementById('staticrypt-form').addEventListener('submit', function(e) {
         e.preventDefault();
