--- a/recharter.html
+++ b/recharter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 </html>
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <title>Annual Recharter</title>
     <link rel='stylesheet' href='styles/components.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
