--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
   <meta name="Description" content="Troop 370 - Atlanta, GA | Boy Scout Troop in Buckhead/Brookhaven/Sandy Springs area | Sponsored by St. James United Methodist Church">
   <meta name="msvalidate.01" content="0E12A7A6688D1B7250808B7C0C0BC3F5" />
   <title>Home</title>
