--- a/password_template.html
+++ b/password_template.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <title>Protected Page</title>
 
     <!-- troop370 encrypted page styles -->
