--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -1,6 +1,6 @@
 </html>
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <title>Content Test Page</title>
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="styles/bundle.css">
