--- a/template-embedded-form.html
+++ b/template-embedded-form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style=overflow:hidden;>
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <title>____________________</title>
     <link rel='stylesheet' href='styles/components.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
