--- a/index.html
+++ b/index.html
@@ -102,8 +102,15 @@
     </div>
   </div>
 <script>
-  if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('service-worker.js')
+  if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+        // Registration was successful
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      })
+      .catch(function(err) {
+        // registration failed :(
+        console.log('ServiceWorker registration failed: ', err);
+      });
   }
 </script>
 <!--<script>
