add MLK campout, woodruff, and summit

--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -50,7 +50,13 @@
     <div class="content-strip">
       <div class="container">
         <h4>Summer Camp at Woodruff Scout Reservation</h4>
-        <p>June 9 - 15, 2019<br><br>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
+        <p>June 9 - 15, 2019<br><br>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.<br><br><a href="woodruff-sc-sign-up_encrypted.html">Sign up for Woodruff Summer Camp</a></p>
+      </div>
+    </div>
+    <div class="content-strip">
+      <div class="container">
+        <h4>Summer Camp at Summit Bechtel Reserve</h4>
+        <p>June 23 - 29, 2019<br><br>Troop 370 will again have a second summer camp at the Summit Bechtel Reserve in West Virginia. This will be a different summer camp experience from our primary summer camp at Woodruff Scout Reservation. Morning and afternoon activities focus on skill development or advancement activities like skateboarding, rock climbing, archery, kayaking, ecology/conservation, Project COPE, Outdoor Skills, mountain biking or wilderness survival. Evening programs are centered around special events, competitions, or open programs.<br><br><a href="summit-sc-sign-up_encrypted.html">Sign up for Summit Summer Camp</a></p>
       </div>
     </div>
     <div class="content-strip">
