--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <carousel>
     <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
-        <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card4">
+        <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card2">
           <div class="carousel-text-card">
             <div>
-              <h2 class="carousel-title">Winter Camp</h2>
-              <p class="carousel-info">December 27-31</p>
-              <a href="winter-camp-sign-up_encrypted.html#tevents" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+              <h2 class="carousel-title">MLK Campout: Mountain Biking & River Paddling</h2>
+              <p class="carousel-info">January 18-21</p>
+              <a href="campout-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
             </div>
           </div>
         </div>
@@ -32,6 +32,24 @@
               <h2 class="carousel-title">Okpik Winter Adventure</h2>
               <p class="carousel-info">February 14-18</p>
               <a href="okpik-2019-sign-up_encrypted.html#tevents" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card4">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Woodruff Summer Camp</h2>
+              <p class="carousel-info">June 9-15</p>
+              <a href="woodruff-sc-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card5">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Summit Summer Camp</h2>
+              <p class="carousel-info">June 23-29</p>
+              <a href="summit-sc-sign-up_encrypted.html" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
             </div>
           </div>
         </div>
