--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <carousel>
     <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
+        <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card6">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Merit Badge Clinic</h2>
+              <p class="carousel-info">February 9; 8:30 AM - 3:00 PM</p>
+              <a href="https://www.eventbrite.com/e/boy-scout-troop-370-merit-badge-clinic-feb-2019-tickets-53531615503" class="mdc-button standard-light-button mdc-button--outlined">Sign Up</a>
+            </div>
+          </div>
+        </div>
         <div class="carousel-cell ripple-dark-bg ripple-mobile" id="card2">
           <div class="carousel-text-card">
             <div>
