--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -60,12 +63,5 @@
         <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="http://meritbadge.info">meritbadge.info</a><br>&#8193;&#8193;Summer Merit Badge Clinic - August 18, 2018<br>&#8193;&#8193;Winter Merit Badge Clinic – February 9, 2019 (Part of Scout Weekend)</p>
       </div>
     </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-  <script type="text/javascript">
-  	$(".button-collapse").sideNav();
-  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-  <div class="hiddendiv common"></div>
   </body>
 </html>
