--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 </html>
   <head>
@@ -77,12 +80,5 @@
         <p>July 21 - August 2, 2019<br><br>The World Scout Jamboree (WSJ) is the largest regular event organized by the World Organization of the Scout Movement (WOSM), gathering up to 50,000 Scouts from more than 150 countries around the World. It is an educational event to promote peace and understanding among young people from different cultures. The World Scout Jamboree includes many activities available at the Summit Bechtel Scout Reserve. For more information, visit the host website at 2019wsj.org. The 2019 WSJ will be the 24th Jamboree in Scouting history. The first Jamboree took place in England in 1920.</p>
       </div>
     </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-  <script type="text/javascript">
-  	$(".button-collapse").sideNav();
-  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-  <div class="hiddendiv common"></div>
   </body>
 </html>
