--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
+---
+layout: home
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
   <meta name="Description" content="Troop 370 - Atlanta, GA | Boy Scout Troop in Buckhead/Brookhaven/Sandy Springs area | Sponsored by St. James United Methodist Church">
-  <meta name="msvalidate.01" content="0E12A7A6688D1B7250808B7C0C0BC3F5" />
   <title>Home</title>
-  <link rel='stylesheet' href='styles/components.css'>
-  <link rel='stylesheet' href='styles/page-specific.css'>
-  <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
-  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
-  <link rel="stylesheet" href="styles/bundle.css">
-  <script src="scripts/bundle.js" async></script>
 </head>
 
 <body>
@@ -128,35 +123,5 @@
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </div>
   </div>
-<script>
-  if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
-        // Registration was successful
-        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-      })
-      .catch(function(err) {
-        // registration failed :(
-        console.log('ServiceWorker registration failed: ', err);
-      });
-  }
-</script>
-<!--<script>
-  // register ServiceWorker, remember to use absolute path!
-  if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('troop370/service-worker.js', {scope: '/troop370/'})
-  }
-</script>-->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-<script type="text/javascript">
-	$(".button-collapse").sideNav();
-</script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-<div class="hiddendiv common"></div>
-<script>
-$(document).ready(function(){
-  $(".mobile-appbar-title").text("Boy Scout Troop 370");
-});
-</script>
 </body>
 </html>
