--- a/participation.html
+++ b/participation.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,12 +21,5 @@
         <p>Scout and parent participation are crucial to the success of Troop 370.  Learning, leadership, and advancement opportunities abound for Scouts.<br><br>For parents, there are many ways in which you can assist through volunteer efforts.  There is no greater joy than joining your Scout through their Troop 370 experience, and working to support the Troop "behind the scenes".  If you would like to see how you can help, please contact the Troop, attend a meeting, or check out the "What Can I Do?" link in the password protected members section of the site.  Meetings are held most Wednesday evenings from 7:30 - 9:00PM in the St. James UMC activities building.<br><br>Using the drop-down menu under "Scout/Parent Info" above, you will find forms, helpful information, and other common documents that you will find helpful during your journey through Scouts at Troop 370.</p>
       </div>
     </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-  <script type="text/javascript">
-  	$(".button-collapse").sideNav();
-  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-  <div class="hiddendiv common"></div>
   </body>
 </html>
