--- a/photos.html
+++ b/photos.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,12 +16,5 @@
   </head>
   <body>
     <iframe src="https://www.store.troop370atlanta.org/photos" style="width:100vw;height:calc(100vh - 64px);"></iframe>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-  <script type="text/javascript">
-  	$(".button-collapse").sideNav();
-  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
-  <div class="hiddendiv common"></div>
   </body>
 </html>
