--- a/sea-base-crew-2019-sign-up_encrypted.html
+++ b/sea-base-crew-2019-sign-up_encrypted.html
@@ -1,4 +1,7 @@
-<!doctype html>
+---
+layout: default
+---
+<!DOCTYPE html>
 <html class="staticrypt-html">
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
