Change High Adventure card link "Learn more" to "View list"

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: home
             <div>
               <h2 class="carousel-title">High Adventure</h2>
               <p class="carousel-info">2019</p>
-              <a href="camps-adventure.html#tevents" class="mdc-button standard-light-button mdc-button--outlined">Learn More</a>
+              <a href="camps-adventure.html#tevents" class="mdc-button standard-light-button mdc-button--outlined">View list</a>
             </div>
           </div>
         </div>
