changed values from blue to white
i dont know if this will work but lets see

--- a/leadership-training.html
+++ b/leadership-training.html
@@ -20,13 +20,13 @@ layout: default
         <h3 class="size8">Leadership Training</h3>
       </div>
     </div>
-    <div class="content-strip blue">
+    <div class="content-strip white">
       <div class="container">
         <h4>Introduction to Leadership Skills for Troops (ILST)</h4>
         <p>The purpose of the ILST course is to teach Scouts with leadership positions about their new roles and how to most effectively reach success in that role. It is intended to help Boy Scouts in leadership positions within their troop understand their responsibilities and to equip them with organizational and leadership skills to fulfill those responsibilities. ILST is the first course in the series of leadership training offered to Boy Scouts and is a replacement for Troop Leadership Training. Completion of ILST is a prerequisite for Boy Scouts to participate in the more advanced leadership courses National Youth Leadership Training (NYLT) and the National Advanced Youth Leadership Experience (NAYLE).<br><br>Troop 370 offers lLST as part of Leadership Weekend every August.</p>
       </div>
     </div>
-    <div class="content-strip blue">
+    <div class="content-strip white">
       <div class="container">
         <h4>National Youth Leadership Training (NYLT)</h4>
         <p>National Youth Leadership Training is an exciting, action-packed program designed for councils to provide youth members with leadership skills and experience they can use in their home troops.</p>
@@ -35,7 +35,7 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="content-strip blue">
+    <div class="content-strip white">
       <div class="container">
         <h4>National Advanced Youth Leadership Experience (NAYLE)</h4>
         <p>National Advanced Youth Leadership Experience is an exciting program that enhances leadership skills and expands upon the team-building and ethical decision-making skills learned in NYLT. NAYLE emphasizes leadership, teamwork, and selfless service, and uses the core elements of NYLT to help youth internalize and strengthen these skills. The National Advanced Youth Leadership Experience course is now available at all national high-adventure bases. The material presented is basically the same at all four venues but is site-specific.</p>
