customize colors and titles for new nav

--- a/about.html
+++ b/about.html
@@ -1,10 +1,13 @@
 ---
 layout: default
+title: General Information
+theme: colorful
+mobile-theme: colorful
 ---
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About</title>
+    <title>About | {{site.title}}</title>
   </head>
   <body>
     <div class="banner extra-padding-y red">
