--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -1,10 +1,13 @@
 ---
 layout: default
+title: Camps/High Adventure
+theme: colorful
+mobile-theme: colorful
 ---
 <!DOCTYPE html>
-</html>
+<html lang="en">
   <head>
-    <title>Camps/High Adventure</title>
+    <title>{{page.title}} | {{site.title}}</title>
   </head>
   </style>
   <body>
