--- a/payments.html
+++ b/payments.html
@@ -1,10 +1,13 @@
 ---
 layout: default
+title: Payments
+theme: colorful
+mobile-theme: colorful
 ---
 <!DOCTYPE html>
-</html>
+<html lang="en">
   <head>
-    <title>Payments</title>
+    <title>{{page.title}} | {{site.title}}</title>
   </head>
   <body>
     <div class="banner">
